// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Avatar component for authenticated user correctly 1`] = `
<div
  className="user-block"
>
  <div
    className="user-block__avatar"
  >
    <a
      href="/mylist"
      onClick={[Function]}
    >
      <img
        alt="User avatar"
        height="63"
        src="https://htmlacademy-react-3.appspot.com/"
        width="63"
      />
    </a>
  </div>
</div>
`;

exports[`Should render Avatar component for non-authenticated user correctly 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;
